# gmtsolar-blackoffice

./: .dockerignore  .gitignore  CLAUDE.md  README.md  deployment.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json
api/: .env.example  Cargo.toml  Dockerfile
api/.sqlx/: query-07a9b2c61a58b040242cb120103a6227f9adb24c5861dfd38e20fa711919bbd5.json  query-0d6bcef4e4d36894fa79d5e909b81e127e8117158f118de799510f8e701801c1.json  query-0ee8acde49dde77a5c0bab5843770750bd247f059a105654dea34c2679d0a3af.json  query-1075a26817287cd769f54d65f96c6ea0bfc6d4b546244818031ebd82801550cb.json  query-11745be8da2d6972addc987ab89a492ee42886e4ee677b278d548491c5ac2630.json  query-1b742d68897751fa2f4e13e2ba72c8d6f1c6a212130b32e3cc1e653cc723a374.json  query-251ec54c0661110808a8e6484554922160b185b7b9200df9f0fa213c9ca4d1c0.json  query-2cff54109f721e863fa69aab93a0b99f89c51dc5e49f0146957d6a182e29dcc3.json  query-3586786de4a2fcbcc2d9564d107cb6639b38233959a6a083d24dcdacf224b73c.json  query-379312c91f38bd0313826800daf8b2eca1db7f6a7293b9c3d2877c1b2814dc64.json  query-47eefb20e6cc1e4d9e7878103e1ffd320cf64fb033ccd5bc49dc602dcf72351b.json  query-4c7636f725e9569f9a630854a23b99117a15acaf6d944e3860f06ea4e7fe4f43.json  query-4ef3cb2f019bfb0d1f4dbf67449bc318b7afc40e99359136b84fd5f7d29d3a70.json  query-531e8ea7a608b6f227de5640cee7259af54a1417b1383beb9c92aafdf5e4dd76.json  query-54f707f29656bc25758b359786beaf8d5cb0812f44f4a7f00cb024d6d8c9fce5.json  query-569ba8a94cfe430652266c7515dce29be7728715e8be96932f58574f9c6aa70d.json  (+41 more)
api/migrations/: 0001_create_users.sql  (+13 more)
api/src/: db.rs  (+3 more)
(+163 files in other folders)
